feat(game): ✨️游戏核心-ai